[gd_scene load_steps=3 format=3 uid="uid://xipkuscb13ti"]

[ext_resource type="Script" path="res://tools/editor/VariantSync.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://obsxyvp27tt3" path="res://tools/editor/VariantSyncEditor.tscn" id="2"]

[node name="Window" type="ConfirmationDialog"]
script = ExtResource("1")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
clip_contents = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -36.0

[node name="SpinBox" type="HSlider" parent="VBoxContainer"]
layout_mode = 2
min_value = 10.0
value = 100.0

[node name="PHAudioStreamEditor" parent="VBoxContainer" instance=ExtResource("2")]
layout_mode = 2
size_flags_vertical = 3

[node name="PHAudioStreamEditor2" parent="VBoxContainer" instance=ExtResource("2")]
layout_mode = 2
size_flags_vertical = 3
allow_dragging = true
text = "Variant"

[connection signal="about_to_popup" from="." to="." method="_on_WindowDialog_about_to_show"]
[connection signal="confirmed" from="." to="." method="_on_WindowDialog_confirmed"]
[connection signal="value_changed" from="VBoxContainer/SpinBox" to="." method="_on_SpinBox_value_changed"]
